add delete image
